--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: PeakBucket
 
 # Short bio or description (displayed in the header)
-description: A data tracking and visualization website for peakbaggers
+description: The latest on the data tracking and visualization website for peakbaggers
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://secure.gravatar.com/avatar/1e936ce6768bdaba89f583130bfe1b55
@@ -17,19 +17,10 @@ avatar: https://secure.gravatar.com/avatar/1e936ce6768bdaba89f583130bfe1b55
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
   email: peakbucket@gmail.com
   facebook: peakbucket
-  flickr:
-  github:
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: peakbucket
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  instagram: peakbucket
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
