--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ description: The latest on the data tracking and visualization website for peakb
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://secure.gravatar.com/avatar/1e936ce6768bdaba89f583130bfe1b55
 
+# enable pagination
+paginate: 6
 #
 # Flags below are optional
 #
