update email to peakmaster@peakbucket.com

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ paginate: 6
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  email: peakbucket@gmail.com
+  email: peakmaster@peakbucket.com
   facebook: peakbucket
   twitter: peakbucket
   instagram: peakbucket
