--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ google_analytics: UA-59727414-5
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: "http://blog.peakbucket.com/"
+url: "http://blog.peakbucket.com"
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
