--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-59727414-5
+google_analytics: G-QG2VP30J3R
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
